# pylibftdi

./: .gitignore  .hgignore  .readthedocs.yaml  CHANGES.txt  Dockerfile  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  PKG-INFO  README  README.rst  README.txt  pyproject.toml  setup.py
.github/workflows/: python-lint-and-test.yml
doc/: Makefile  advanced_usage.rst  basic_usage.rst  conf.py  how_to.rst  index.rst  installation.rst  introduction.rst  modules.rst  pylibftdi.examples.rst  pylibftdi.rst  quickstart.rst  troubleshooting.rst  tutorial.rst
docs/: advanced_usage.rst  basic_usage.rst  bit_server.rst  bitbang.rst  conf.py  developing.rst  how_to.rst  index.rst  installation.rst  introduction.rst  lcd.rst  led_flash.rst  make.bat  pylibftdi.examples.rst  pylibftdi.rst  quickstart.rst  serial.rst  troubleshooting.rst
examples/: bit_server.py  lcd.py  led_flash.py  list_devices.py
pylibftdi/: __init__.py  __main__.py  _base.py  bitbang.py  device.py  driver.py  fifo_buffer.py  serial_device.py  test_bitbang.py  test_common.py  test_driver.py  util.py
pylibftdi/examples/: __init__.py  bit_server.py  info.py  lcd.py  led_flash.py  list_devices.py  magic_candle.py  midi_output.py  morse.py  pin_read.py  serial_loopback.py  serial_transfer.py
pylibftdi/tests/: __init__.py  test_bitbang.py  test_bus.py  test_common.py  test_driver.py
scripts/: ftdi_osx_driver_reload  ftdi_osx_driver_unload
src/pylibftdi/: __init__.py  __main__.py  bitbang.py  device.py  driver.py  serial_device.py  util.py
src/pylibftdi/examples/: __init__.py  bit_server.py  info.py  lcd.py  led_flash.py  list_devices.py  midi_output.py
tests/: __init__.py  call_log.py  test_all.py  test_bitbang.py  test_bus.py  test_common.py  test_device.py  test_driver.py  test_fifo_buffer.py  test_serial.py
