[project]
name = "pylibftdi"
version="0.20.0"
readme = "README.rst"
description = "Pythonic interface to FTDI devices using libftdi."
authors = [
    {name = "Ben Bass", email = "benbass@codedstructure.net"}
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.7.0"
dependencies = []
keywords = [
    "ftdi",
    "libftdi",
    "usb"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]

[project.urls]
repository = "https://github.com/codedstructure/pylibftdi"
documentation = "https://pylibftdi.readthedocs.io/en/latest/"
changelog = "https://github.com/codedstructure/pylibftdi/blob/main/CHANGES.txt"

[bdist_wheel]
universal = 1

[tool.ruff]
select = ["E", "W", "F", "B", "I", "UP", "PL"]
ignore = [
  "PLR2004",  # Magic value used in comparison
  "PLR0913",  # Too many arguments to function call
]
