[tool.poetry]
name = "pylibftdi"
version="0.23.0"
description = "Pythonic interface to FTDI devices using libftdi."
license = "MIT"
authors = [
    "Ben Bass <benbass@codedstructure.net>",
]
readme = "README.rst"
homepage = "https://github.com/codedstructure/pylibftdi"
repository = "https://github.com/codedstructure/pylibftdi"
documentation = "https://pylibftdi.readthedocs.io/en/latest/"
keywords = [
    "ftdi",
    "libftdi",
    "usb"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.7.0"

[tool.poetry.dev-dependencies]
ruff = "^0.7.3"
pytest = { version="^8.3.3", python=">=3.8" }
mypy = { version="^1.13.0", python=">=3.8" }
black = { version="^24.10.0", python=">=3.9" }

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP", "PL"]
ignore = [
  "PLR2004",  # Magic value used in comparison
  "PLR0913",  # Too many arguments to function call
]

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]
addopts = [
    "--import-mode=importlib",
]
